Added descriptive dashboard page

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -225,7 +225,7 @@ $("#connect").removeClass('btn-warning').addClass("btn-success");
       <h1>WebPlot Session Dashboard  </h1>
      
        <button id="connect" type="button" class="btn btn-warning" onclick="AutoConnect()">Status <span id="statusicon" class="glyphicon glyphicon-time"> </span>  </button>
-      <p> About...  </p>      
+      <p> Try running the <mark>usage.go</mark> from <mark>github.com/wiless/webplot/cmd</mark> folder of the package , And try to   <a style="cursor: pointer;" class="btn btn-primary btn-sm"  onclick="AutoConnect()"  > reconnect</a> </p>      
       <p class="text-danger"> Do NOT CLOSE THIS TAB</p>
       <p>
         <a class="btn btn-primary btn-lg">Learn more</a>
